hw-3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-balancer
spec:
  selector:
    app: my-balancer
  ports:
    - name: http-balancer
      port: 80
      targetPort: 8000
