hw-3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-balancer
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /health$3
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/(.*)(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-balancer
                port:
                  number: 80
          - path: /
            pathType: ImplementationSpecific
            backend:
                service:
                  name: my-balancer
                  port:
                    number: 80
